--- a/app/src/main/res/layout/fragment_base.xml
+++ b/app/src/main/res/layout/fragment_base.xml
@@ -31,6 +31,8 @@
             android:layout_marginBottom="16dp" />
 
         <!-- 可扩展内容区域 - 子Fragment可以在这里添加自定义内容 -->
+
+        <!-- 底部按钮区域 -->
         <FrameLayout
             android:id="@+id/fl_custom_content"
             android:layout_width="match_parent"
@@ -43,23 +45,22 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_vertical"
-                android:textSize="16sp"
+                android:gravity="center"
                 android:textColor="#666666"
-                android:gravity="center" />
+                android:textSize="16sp" />
 
             <EditText
                 android:id="@+id/editText"
                 android:layout_width="match_parent"
                 android:layout_height="100dp"
-                android:gravity="center"
                 android:ems="10"
+                android:gravity="center"
                 android:inputType="text"
                 android:text="" />
 
 
         </FrameLayout>
 
-        <!-- 底部按钮区域 -->
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
