--- a/app/src/main/res/layout/fragment_base.xml
+++ b/app/src/main/res/layout/fragment_base.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".BaseFragment">
+    tools:context=".fragment.base.BaseFragment">
 
     <!-- 主要内容区域 -->
     <LinearLayout
